style.css
:root {
    --prim: #77D2F9;
    --sec: #ffffff;
    --thir: #FFE5B4;
    --shadow: rgb(168, 168, 168)
}

/*making color variables, use them or add to them to make life easier. 
if you don't know how to use them, just do "--(variable name)" and vscode will complete it for you*/
* {
    font-family: "Sniglet", system-ui;
}
/*lowk doesn't work */
body {
    font-weight: 400;
    font-style: normal;

    margin: 0px;
    padding: 0px;
}

header {
    display: flex;
    /*styling the header blue and making it go into the middle*/
    flex-direction: column;
    background-color: var(--prim);
    margin: 40px 0px;
    padding: 20px;
    border-radius: 10px;
    align-items: center;
    width: 300px;
    justify-self: center;
}

.homeCont {
    display: flex;
    justify-content: center;
    font-size: 1.5rem;
    background-color: var(--thir);
    width: 150px;
    padding: 20px;
    border: black solid 2px;
    text-decoration: none;
    border-radius: 10px;
    color: black;
    box-shadow: 0 3px 3px var(--shadow);
    margin-left: 85%;
    margin-top: 30%;
}

/* Expenses page */

.navBar {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0;
    background-color: var(--prim);
    width: calc(100% - 50px);
    height: 50px;
    padding: 25px;
}

.navBar a {
    border-radius: 50%;
    background-color: var(--sec);
    width: 70px;
    height: 70px;
    line-height: 0;
    color: rgba(0, 0, 0, 0);
    display: flex;
    justify-content: center;
    align-items: center;
    & img {
        width: 80%;
        height: 80%;
    }
}

/* Line for nav bar */
.navBar:before {
    content: "";
    position: absolute;
    top: 50%;
    left: 0;
    width: 20%;
    height: 4px;
    background: #ddd;
    transform: translateY(-50%);
    z-index: 0;
}

/* Main Content */
main {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.back-btn-container {
    width: 50px;
    height: 50px;
    align-self: flex-start;
    display: flex;
    margin: 15px;
}

.backBtn > a {
    color: transparent;
    text-decoration: none;
}
.backBtn {
    border: transparent;
    border-radius: 50%;
    height: 50px;
    width: 50px;
    font-size: 1.5rem;
}

/* Makes BG work */
.current-page {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-content: center;
    width: 1000px;
}

.current-page div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.current-page h1 {
    text-align: center;
    background-color: var(--thir);
    padding: 15px 50px;
    margin-bottom: 5px;
    
    border-radius: 5px;
}
/* make this blue box true to its size and change everything else alongside with it */
.current-page ul {
    display: grid;
    grid-template: 1fr 1fr / 1fr 1fr;
    justify-content: center;
    align-items: center;
    row-gap: 80px;
    column-gap: 400px;
    background-color: var(--prim);
    width: 100%;
    padding: 60px 20px;
    border-radius: 10px;
    list-style: none;

    & li {
        display: flex;
        flex-direction: column;
    }
    & li h2 {
        text-align: start;
        text-wrap: nowrap;
        line-height: 0;
    }
    & li input {
        background-color: var(--thir);

        padding: 25px 5px;
        border-radius: 10px;
        border: 0;
    }
}

#cont {
    position: absolute;
    border: transparent;
    border-radius: 10px;
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.51);;
    margin-top: 35vw;
    margin-left: 50vw;
    padding: 30px 90px;
    font-size: 30px;
    background-color: var(--thir);
}

hr {
    width: 100%;
    border: none;
    height: 5px;
    margin: 0;
    padding: 0;
}

hr.fulfilled:is(img.fulfilled ~ hr) {
    background-image: linear-gradient(to right, #D9D9D9, #FFFFFF);
}

hr.fulfilled {
    background: #d9d9d9;
}

hr.fulfilled:not(img.fulfilled ~ hr) {
    background-image: linear-gradient(to left, #D9D9D9, #FFFFFF);
}

hr:not(.fulfilled) {
    background-color: transparent;
    border: none;
    opacity: 0;
    width: 100%;
}

.fulfilled:has(img) {
    filter: brightness(85%);
}

.breadCrumb {
    aspect-ratio: 1;
}

/* old- - bring this back if needed */

/* .education-content {
    align-content: space-between;
    flex-direction: column;
    gap: 25px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 1000px;
    margin: auto;
    position: relative;
} 

.edu {
    display: flex;
    margin-left: 45%;
}

.input1 {
    justify-content: space-between;
    display: flex;
    align-items: center;
    max-width: 1000px;
    margin: auto;
    position: relative;
}

.input2 {
    justify-content: space-between;
    gap: 20px;
    display: flex;
    align-items: center;
    max-width: 1000px;
    margin: auto;
    position: relative;
}

